--- a/index-html/style.css
+++ b/index-html/style.css
@@ -1,20 +1,15 @@
 p {
-	color: navy;
-}
-
-p.info {
-	font-size: small;
-	background-color: #ff0000
+	color: rgb(0, 0, 0);
 }
 
 h1 {
 	color: white;
-	text-shadow: navy 1px 0 10px;;
+	text-shadow: rgb(76, 0, 255) 1px 0 10px;;
 }
 
 h2 {
 	margin: 5px;
 	font-family: cursive;
-	color: #3f3faf;
+	color: #00d0ff;
 	background: linear-gradient(90deg,white,#ffefaf);
 }
