--- a/project.css
+++ b/project.css
@@ -7,6 +7,10 @@ h1 {
     text-shadow: blue 5px 0 10px;;
     font-size: 50px;
     border: 5px solid blue;
+    text-align: center;
+}
+h2 {
+    text-align: center;
 }
 li {
     background-color: aquamarine;
@@ -15,4 +19,16 @@ li {
 label {
     background-color: white;
     border: 2px solid red;
+}
+body {
+    margin: 0;
+    padding: 20px;
+}
+p {
+    text-align: center;
+}
+div.risuto {
+    text-align: center;
+    background-color: white;
+    border: 5px solid red;
 }
